# CKE_Modeling

./: README.md
01_occupany/: CMakeLists.txt  README  fiber_greedy.cu  matrixMul.cu  matrixMul_cke.cu
02_benchmarking/: CMakeLists.txt  globalmem.cu
TraceGen/: Makefile  cke_trace.cpp  cke_trace.h  test01.txt
benchmarks/cmp_cmp/: Makefile  cmp_cmp  cmp_cmp.cu  profile_app.sh  read_trace.ipynb  readme  trace.csv
benchmarks/mem_mem/: Makefile  mem_mem  mem_mem.cu  profile_app.sh  read_trace.ipynb  readme
benchmarks/mm_cuSDK65/: CMakeCache.txt  CMakeLists.txt  Makefile  clean.sh  cmake_install.cmake  matrixMul  matrixMul.cu  matrixMul_cke  matrixMul_cke.cu_v1  matrixMul_cke.cu_v2_stable  matrixMul_low  matrixMul_low.cu  matrixMul_low.cu_v2  matrixMul_s2.cu  matrixMul_s4.cu  matrixMul_s6.cu  tmp  tmp_cke  tmp_org
benchmarks/mm_cuSDK65/binary_tool/: cfg_mm30  elf_mm  matrixMul.sm_20.cubin  matrixMul.sm_30.cubin  matrixMul.sm_35.cubin  matrixMul.sm_37.cubin  matrixMul.sm_50.cubin  ptx_mm  ptx_sass_mm  reg_live_info_sm30
benchmarks/mm_mm/: Makefile  mm  mm.cu  (+4 more)
block_vs_async/: get_trace  read_trace.ipynb
logGP_lr_ridge/: 1stream_1_1M.csv  Makefile  bytes-dev0.csv  bytes-dev1.csv  dev1_h2d_stepsize4.csv  h2d  h2d.cu  h2d_bytes  h2d_bytes.cu  linear_reg.ipynb  logP_model.ipynb  read_gpu_summary.ipynb  ridge_reg.ipynb  tmp.csv  tmp1.csv  tmp_dev1.csv  understand_01.ipynb
rodinia30_cuda/: readme.md
vecAdd_blocking/: main.cu  main_2.cu
vecAdd_nonBlocking/: 01_gpuTrace.sh  02_print_runtime.py  3h2d.cu  gpuTrace.sh  h2d.cu  main.cu  main.cu_v1  nvprof_gputrace.csv
(+58 files in other folders)
